[package]
name = "pcast"
version = "0.3.0"
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
license = "MIT"
repository = "https://github.com/mbr/pcast"
documentation = "https://mbr.github.com/pcast-rs/pcast"
description = "Same-size tagged data structure conversions"

[dependencies]
# this dependency should go away as soon as try_into is stabilized in the stdlib
try_from = "0.2.0"
